reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__enums__internally_tagged_enum_mixed_variants.snap
---
source: reflectapi-demo/src/tests/enums.rs
expression: schema
---
{
  "name": "",
  "functions": [
    {
      "name": "inout_test",
      "path": "",
      "input_type": {
        "name": "reflectapi_demo::tests::enums::E"
      },
      "output_type": {
        "name": "reflectapi_demo::tests::enums::E"
      },
      "serialization": [
        "json",
        "msgpack"
      ]
    }
  ],
  "input_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Empty",
        "description": "Struct object with no fields",
        "fields": "none"
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::enums::A",
        "fields": {
          "named": [
            {
              "name": "x",
              "type": {
                "name": "u32"
              },
              "required": true
            },
            {
              "name": "y",
              "type": {
                "name": "u32"
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::enums::B",
        "fields": {
          "named": [
            {
              "name": "z",
              "type": {
                "name": "u32"
              },
              "required": true
            },
            {
              "name": "w",
              "type": {
                "name": "std::option::Option",
                "arguments": [
                  {
                    "name": "std::string::String"
                  }
                ]
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "enum",
        "name": "reflectapi_demo::tests::enums::E",
        "representation": {
          "internal": {
            "tag": "tag"
          }
        },
        "variants": [
          {
            "name": "a",
            "fields": {
              "unnamed": [
                {
                  "name": "0",
                  "type": {
                    "name": "reflectapi_demo::tests::enums::A"
                  },
                  "required": true
                }
              ]
            }
          },
          {
            "name": "b",
            "fields": {
              "unnamed": [
                {
                  "name": "0",
                  "type": {
                    "name": "reflectapi_demo::tests::enums::B"
                  },
                  "required": true
                }
              ]
            }
          },
          {
            "name": "c",
            "fields": {
              "named": [
                {
                  "name": "p",
                  "type": {
                    "name": "std::string::String"
                  },
                  "required": true
                },
                {
                  "name": "q",
                  "type": {
                    "name": "std::option::Option",
                    "arguments": [
                      {
                        "name": "std::string::String"
                      }
                    ]
                  },
                  "required": true
                }
              ]
            }
          },
          {
            "name": "d",
            "fields": "none"
          }
        ]
      },
      {
        "kind": "enum",
        "name": "std::option::Option",
        "description": "Optional nullable type",
        "parameters": [
          {
            "name": "T"
          }
        ],
        "representation": "none",
        "variants": [
          {
            "name": "None",
            "description": "The value is not provided, i.e. null",
            "fields": "none"
          },
          {
            "name": "Some",
            "description": "The value is provided and set to some value",
            "fields": {
              "unnamed": [
                {
                  "name": "0",
                  "type": {
                    "name": "T"
                  }
                }
              ]
            }
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "std::string::String",
        "description": "UTF-8 encoded string"
      },
      {
        "kind": "primitive",
        "name": "u32",
        "description": "32-bit unsigned integer"
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Infallible",
        "description": "Error object which is expected to be never returned",
        "fields": "none"
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::enums::A",
        "fields": {
          "named": [
            {
              "name": "x",
              "type": {
                "name": "u32"
              },
              "required": true
            },
            {
              "name": "y",
              "type": {
                "name": "u32"
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::enums::B",
        "fields": {
          "named": [
            {
              "name": "z",
              "type": {
                "name": "u32"
              },
              "required": true
            },
            {
              "name": "w",
              "type": {
                "name": "std::option::Option",
                "arguments": [
                  {
                    "name": "std::string::String"
                  }
                ]
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "enum",
        "name": "reflectapi_demo::tests::enums::E",
        "representation": {
          "internal": {
            "tag": "tag"
          }
        },
        "variants": [
          {
            "name": "a",
            "fields": {
              "unnamed": [
                {
                  "name": "0",
                  "type": {
                    "name": "reflectapi_demo::tests::enums::A"
                  },
                  "required": true
                }
              ]
            }
          },
          {
            "name": "b",
            "fields": {
              "unnamed": [
                {
                  "name": "0",
                  "type": {
                    "name": "reflectapi_demo::tests::enums::B"
                  },
                  "required": true
                }
              ]
            }
          },
          {
            "name": "c",
            "fields": {
              "named": [
                {
                  "name": "p",
                  "type": {
                    "name": "std::string::String"
                  },
                  "required": true
                },
                {
                  "name": "q",
                  "type": {
                    "name": "std::option::Option",
                    "arguments": [
                      {
                        "name": "std::string::String"
                      }
                    ]
                  },
                  "required": true
                }
              ]
            }
          },
          {
            "name": "d",
            "fields": "none"
          }
        ]
      },
      {
        "kind": "enum",
        "name": "std::option::Option",
        "description": "Optional nullable type",
        "parameters": [
          {
            "name": "T"
          }
        ],
        "representation": "none",
        "variants": [
          {
            "name": "None",
            "description": "The value is not provided, i.e. null",
            "fields": "none"
          },
          {
            "name": "Some",
            "description": "The value is provided and set to some value",
            "fields": {
              "unnamed": [
                {
                  "name": "0",
                  "type": {
                    "name": "T"
                  }
                }
              ]
            }
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "std::string::String",
        "description": "UTF-8 encoded string"
      },
      {
        "kind": "primitive",
        "name": "u32",
        "description": "32-bit unsigned integer"
      }
    ]
  }
}
