reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__enums__internally_tagged_enum_with_boxed_types-2.snap
---
source: reflectapi-demo/src/tests/enums.rs
expression: "super::into_typescript_code::<E>()"
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflectapi-cli
//
// Schema name:
//

export function client(base: string | Client): __definition.Interface {
  return __implementation.__client(base);
}

export namespace __definition {
  export interface Interface {
    inout_test: (
      input: reflectapi_demo.tests.enums.E,
      headers: {},
    ) => AsyncResult<reflectapi_demo.tests.enums.E, {}>;
  }
}
export namespace reflectapi {
  /**
   * Struct object with no fields
   */
  export interface Empty {}

  /**
   * Error object which is expected to be never returned
   */
  export interface Infallible {}
}

export namespace reflectapi_demo {
  export namespace tests {
    export namespace enums {
      export interface Data {
        a: number /* u32 */;
        b: string;
      }

      export type E =
        | ({ tag: "a" } & reflectapi_demo.tests.enums.Data)
        | {
            tag: "b";
            c: string;
          }
        | { tag: "c" };
    }
  }
}

namespace __implementation {

  function inout_test(client: Client) {
    return (input: reflectapi_demo.tests.enums.E, headers: {}) =>
      __request<
        reflectapi_demo.tests.enums.E,
        {},
        reflectapi_demo.tests.enums.E,
        {}
      >(client, "/inout_test", input, headers);
  }
}
