reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__enums__internally_tagged_enum_with_boxed_types-3.snap
---
source: reflectapi-demo/src/tests/enums.rs
expression: "super::into_rust_code::<BoxedContent>()"
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflectapi-cli
//
// Schema name:
//

#![allow(non_camel_case_types)]
#![allow(dead_code)]

pub use interface::Interface;
pub use reflectapi::rt::*;

pub mod interface {

    #[derive(Debug)]
    pub struct Interface<C: reflectapi::rt::Client + Clone> {
        client: C,
        base_url: reflectapi::rt::Url,
    }

    impl<C: reflectapi::rt::Client + Clone> Interface<C> {
        pub fn try_new(
            client: C,
            base_url: reflectapi::rt::Url,
        ) -> std::result::Result<Self, reflectapi::rt::UrlParseError> {
            if base_url.cannot_be_a_base() {
                return Err(reflectapi::rt::UrlParseError::RelativeUrlWithCannotBeABaseBase);
            }

            Ok(Self { client, base_url })
        }
        pub async fn inout_test(
            &self,
            input: super::types::reflectapi_demo::tests::enums::BoxedContent,
            headers: reflectapi::Empty,
        ) -> Result<
            super::types::reflectapi_demo::tests::enums::BoxedContent,
            reflectapi::rt::Error<reflectapi::Empty, C::Error>,
        > {
            reflectapi::rt::__request_impl(
                &self.client,
                self.base_url
                    .join("/inout_test")
                    .expect("checked base_url already and path is valid"),
                input,
                headers,
            )
            .await
        }
    }
}
pub mod types {

    pub mod reflectapi_demo {
        pub mod tests {
            pub mod enums {

                #[derive(Debug, serde::Deserialize, serde::Serialize)]
                #[serde(tag = "content_type")]
                pub enum BoxedContent {
                    #[serde(rename = "boxed")]
                    Boxed(
                        std::boxed::Box<
                            super::super::super::reflectapi_demo::tests::enums::BoxedData,
                        >,
                    ),
                    #[serde(rename = "raw")]
                    Raw { content: std::string::String },
                    #[serde(rename = "empty")]
                    Empty,
                }

                #[derive(Debug, serde::Deserialize, serde::Serialize)]
                pub struct BoxedData {
                    pub id: u32,
                    pub description: std::string::String,
                }
            }
        }
    }
}
