reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__enums__internally_tagged_enum_with_boxed_types-4.snap
---
source: reflectapi-demo/src/tests/enums.rs
expression: "reflectapi::codegen::openapi::Spec::from(&schema)"
---
{
  "openapi": "3.1.0",
  "info": {
    "title": "",
    "description": "",
    "version": "1.0.0"
  },
  "paths": {
    "/inout_test": {
      "description": "",
      "post": {
        "operationId": "inout_test",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/reflectapi_demo.tests.enums.E"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/reflectapi_demo.tests.enums.E"
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "reflectapi_demo.tests.enums.Data": {
        "type": "object",
        "title": "reflectapi_demo.tests.enums.Data",
        "required": [
          "a",
          "b"
        ],
        "properties": {
          "a": {
            "$ref": "#/components/schemas/u32"
          },
          "b": {
            "$ref": "#/components/schemas/std.string.String"
          }
        }
      },
      "reflectapi_demo.tests.enums.E": {
        "oneOf": [
          {
            "type": "object",
            "title": "reflectapi_demo.tests.enums.Data",
            "required": [
              "a",
              "b",
              "tag"
            ],
            "properties": {
              "a": {
                "$ref": "#/components/schemas/u32"
              },
              "b": {
                "$ref": "#/components/schemas/std.string.String"
              },
              "tag": {
                "const": "a"
              }
            }
          },
          {
            "type": "object",
            "title": "b",
            "required": [
              "c",
              "tag"
            ],
            "properties": {
              "c": {
                "$ref": "#/components/schemas/std.string.String"
              },
              "tag": {
                "const": "b"
              }
            }
          },
          {
            "type": "object",
            "required": [
              "tag"
            ],
            "properties": {
              "tag": {
                "const": "c"
              }
            }
          }
        ]
      },
      "std.string.String": {
        "description": "UTF-8 encoded string",
        "type": "string"
      },
      "u32": {
        "description": "32-bit unsigned integer",
        "type": "integer"
      }
    }
  }
}
