reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__enums__internally_tagged_enum_with_boxed_types.snap
---
source: reflectapi-demo/src/tests/enums.rs
expression: schema
---
{
  "name": "",
  "functions": [
    {
      "name": "inout_test",
      "path": "",
      "input_type": {
        "name": "reflectapi_demo::tests::enums::E"
      },
      "output_type": {
        "name": "reflectapi_demo::tests::enums::E"
      },
      "serialization": [
        "json",
        "msgpack"
      ]
    }
  ],
  "input_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Empty",
        "description": "Struct object with no fields",
        "fields": "none"
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::enums::Data",
        "fields": {
          "named": [
            {
              "name": "a",
              "type": {
                "name": "u32"
              },
              "required": true
            },
            {
              "name": "b",
              "type": {
                "name": "std::string::String"
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "enum",
        "name": "reflectapi_demo::tests::enums::E",
        "representation": {
          "internal": {
            "tag": "tag"
          }
        },
        "variants": [
          {
            "name": "a",
            "fields": {
              "unnamed": [
                {
                  "name": "0",
                  "type": {
                    "name": "std::boxed::Box",
                    "arguments": [
                      {
                        "name": "reflectapi_demo::tests::enums::Data"
                      }
                    ]
                  },
                  "required": true
                }
              ]
            }
          },
          {
            "name": "b",
            "fields": {
              "named": [
                {
                  "name": "c",
                  "type": {
                    "name": "std::string::String"
                  },
                  "required": true
                }
              ]
            }
          },
          {
            "name": "c",
            "fields": "none"
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "std::boxed::Box",
        "description": "std::boxed::Box pointer type",
        "parameters": [
          {
            "name": "T"
          }
        ],
        "fallback": {
          "name": "T"
        }
      },
      {
        "kind": "primitive",
        "name": "std::string::String",
        "description": "UTF-8 encoded string"
      },
      {
        "kind": "primitive",
        "name": "u32",
        "description": "32-bit unsigned integer"
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Infallible",
        "description": "Error object which is expected to be never returned",
        "fields": "none"
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::enums::Data",
        "fields": {
          "named": [
            {
              "name": "a",
              "type": {
                "name": "u32"
              },
              "required": true
            },
            {
              "name": "b",
              "type": {
                "name": "std::string::String"
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "enum",
        "name": "reflectapi_demo::tests::enums::E",
        "representation": {
          "internal": {
            "tag": "tag"
          }
        },
        "variants": [
          {
            "name": "a",
            "fields": {
              "unnamed": [
                {
                  "name": "0",
                  "type": {
                    "name": "std::boxed::Box",
                    "arguments": [
                      {
                        "name": "reflectapi_demo::tests::enums::Data"
                      }
                    ]
                  },
                  "required": true
                }
              ]
            }
          },
          {
            "name": "b",
            "fields": {
              "named": [
                {
                  "name": "c",
                  "type": {
                    "name": "std::string::String"
                  },
                  "required": true
                }
              ]
            }
          },
          {
            "name": "c",
            "fields": "none"
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "std::boxed::Box",
        "description": "std::boxed::Box pointer type",
        "parameters": [
          {
            "name": "T"
          }
        ],
        "fallback": {
          "name": "T"
        }
      },
      {
        "kind": "primitive",
        "name": "std::string::String",
        "description": "UTF-8 encoded string"
      },
      {
        "kind": "primitive",
        "name": "u32",
        "description": "32-bit unsigned integer"
      }
    ]
  }
}
