reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__enums__internally_tagged_enum_with_optional_fields-2.snap
---
source: reflectapi-demo/src/tests/enums.rs
expression: "super :: into_typescript_code :: < Thing > ()"
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflectapi-cli
//
// Schema name:

export function client(base: string | Client): __definition.Interface {
  return __implementation.__client(base);
}

export namespace __definition {
  export interface Interface {
    inout_test: (
      input: reflectapi_demo.tests.enums.input.Thing,
      headers: {},
      options?: RequestOptions,
    ) => AsyncResult<reflectapi_demo.tests.enums.output.Thing, {}>;
  }
}
export namespace reflectapi {
  /**
   * Struct object with no fields
   */
  export interface Empty {}

  /**
   * Error object which is expected to be never returned
   */
  export interface Infallible {}
}

export namespace reflectapi_demo {
  export namespace tests {
    export namespace enums {
      export namespace input {
        export type Thing =
          | ({
              type: "variant";
            } & reflectapi_demo.tests.enums.input.VariantBody)
          | {
              type: "named";
              amount: string | null;
            };

        export interface VariantBody {
          amount: string | null;
          always_null_on_wire: string | null;
        }
      }

      export namespace output {
        export type Thing =
          | ({
              type: "variant";
            } & reflectapi_demo.tests.enums.output.VariantBody)
          | {
              type: "named";
              amount?: string | null;
            };

        export interface VariantBody {
          amount?: string | null;
          always_null_on_wire: string | null;
        }
      }
    }
  }
}

namespace __implementation {

  function inout_test(client: Client) {
    return (
      input: reflectapi_demo.tests.enums.input.Thing,
      headers: {},
      options?: RequestOptions,
    ) =>
      __request<
        reflectapi_demo.tests.enums.input.Thing,
        {},
        reflectapi_demo.tests.enums.output.Thing,
        {}
      >(client, "/inout_test", input, headers, options);
  }
}
