reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__enums__internally_tagged_enum_with_optional_fields-3.snap
---
source: reflectapi-demo/src/tests/enums.rs
expression: "super :: into_rust_code :: < Thing > ()"
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflectapi-cli
//
// Schema name:

#![allow(non_camel_case_types)]
#![allow(dead_code)]

pub use interface::Interface;
pub use reflectapi::rt::*;

pub mod interface {

    #[derive(Debug)]
    pub struct Interface<C: reflectapi::rt::Client + Clone> {
        client: C,
    }

    impl<C: reflectapi::rt::Client + Clone> Interface<C> {
        pub fn new(client: C) -> Self {
            Self { client }
        }
        pub async fn inout_test(
            &self,
            input: super::types::reflectapi_demo::tests::enums::input::Thing,
            headers: reflectapi::Empty,
        ) -> Result<
            super::types::reflectapi_demo::tests::enums::output::Thing,
            reflectapi::rt::Error<reflectapi::Empty, C::Error>,
        > {
            reflectapi::rt::__request_impl(&self.client, "/inout_test", input, headers).await
        }
    }

    #[cfg(feature = "reqwest")]
    impl Interface<reflectapi::rt::ReqwestClient<reqwest::Client>> {
        /// Convenience: build the client backed by a bare `reqwest::Client`
        /// and the given base URL. Hides the
        /// [`reflectapi::rt::ReqwestClient`] adapter so callers don't need
        /// to name it.
        pub fn try_new(
            client: reqwest::Client,
            base_url: reflectapi::rt::Url,
        ) -> std::result::Result<Self, reflectapi::rt::UrlParseError> {
            Ok(Self::new(reflectapi::rt::ReqwestClient::try_new(
                client, base_url,
            )?))
        }
    }
}
pub mod types {
    pub mod reflectapi_demo {
        pub mod tests {
            pub mod enums {
                pub mod input {

                    #[derive(Debug, serde::Serialize)]
                    #[serde(tag = "type")]
                    pub enum Thing {
                        #[serde(rename = "variant")]
    Variant(
        super::super::super::super::reflectapi_demo::tests::enums::input::VariantBody,
    ),
    #[serde(rename = "named")]
    Named {
        amount: std::option::Option<std::string::String>,
    },
}

                    #[derive(Debug, serde::Serialize)]
                    pub struct VariantBody {
                        pub amount: std::option::Option<std::string::String>,
                        pub always_null_on_wire: std::option::Option<std::string::String>,
                    }
                }
                pub mod output {

                    #[derive(Debug, serde::Deserialize)]
                    #[serde(tag = "type")]
                    pub enum Thing {
                        #[serde(rename = "variant")]
    Variant(
        super::super::super::super::reflectapi_demo::tests::enums::output::VariantBody,
    ),
    #[serde(rename = "named")]
    Named {
        #[serde(default = "Default::default", skip_serializing_if = "std::option::Option::is_none")]
    amount: std::option::Option<std::string::String>,
    },
}

                    #[derive(Debug, serde::Deserialize)]
                    pub struct VariantBody {
                        #[serde(
                            default = "Default::default",
                            skip_serializing_if = "std::option::Option::is_none"
                        )]
                        pub amount: std::option::Option<std::string::String>,
                        pub always_null_on_wire: std::option::Option<std::string::String>,
                    }
                }
            }
        }
    }
}
