reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__enums__internally_tagged_enum_with_optional_fields-4.snap
---
source: reflectapi-demo/src/tests/enums.rs
expression: "reflectapi :: codegen :: openapi :: Spec :: from(& schema)"
---
{
  "openapi": "3.1.0",
  "info": {
    "title": "",
    "description": "",
    "version": "1.0.0"
  },
  "paths": {
    "/inout_test": {
      "description": "",
      "post": {
        "operationId": "inout_test",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/reflectapi_demo.tests.enums.input.Thing"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/reflectapi_demo.tests.enums.output.Thing"
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "reflectapi_demo.tests.enums.input.Thing": {
        "oneOf": [
          {
            "type": "object",
            "title": "reflectapi_demo.tests.enums.input.VariantBody",
            "required": [
              "always_null_on_wire",
              "amount",
              "type"
            ],
            "properties": {
              "always_null_on_wire": {
                "oneOf": [
                  {
                    "description": "Null",
                    "type": "null"
                  },
                  {
                    "$ref": "#/components/schemas/std.string.String"
                  }
                ]
              },
              "amount": {
                "oneOf": [
                  {
                    "description": "Null",
                    "type": "null"
                  },
                  {
                    "$ref": "#/components/schemas/std.string.String"
                  }
                ]
              },
              "type": {
                "const": "variant"
              }
            }
          },
          {
            "type": "object",
            "title": "named",
            "required": [
              "amount",
              "type"
            ],
            "properties": {
              "amount": {
                "oneOf": [
                  {
                    "description": "Null",
                    "type": "null"
                  },
                  {
                    "$ref": "#/components/schemas/std.string.String"
                  }
                ]
              },
              "type": {
                "const": "named"
              }
            }
          }
        ]
      },
      "reflectapi_demo.tests.enums.input.VariantBody": {
        "type": "object",
        "title": "reflectapi_demo.tests.enums.input.VariantBody",
        "required": [
          "always_null_on_wire",
          "amount"
        ],
        "properties": {
          "always_null_on_wire": {
            "oneOf": [
              {
                "description": "Null",
                "type": "null"
              },
              {
                "$ref": "#/components/schemas/std.string.String"
              }
            ]
          },
          "amount": {
            "oneOf": [
              {
                "description": "Null",
                "type": "null"
              },
              {
                "$ref": "#/components/schemas/std.string.String"
              }
            ]
          }
        }
      },
      "reflectapi_demo.tests.enums.output.Thing": {
        "oneOf": [
          {
            "type": "object",
            "title": "reflectapi_demo.tests.enums.output.VariantBody",
            "required": [
              "always_null_on_wire",
              "type"
            ],
            "properties": {
              "always_null_on_wire": {
                "oneOf": [
                  {
                    "description": "Null",
                    "type": "null"
                  },
                  {
                    "$ref": "#/components/schemas/std.string.String"
                  }
                ]
              },
              "amount": {
                "oneOf": [
                  {
                    "description": "Null",
                    "type": "null"
                  },
                  {
                    "$ref": "#/components/schemas/std.string.String"
                  }
                ]
              },
              "type": {
                "const": "variant"
              }
            }
          },
          {
            "type": "object",
            "title": "named",
            "required": [
              "type"
            ],
            "properties": {
              "amount": {
                "oneOf": [
                  {
                    "description": "Null",
                    "type": "null"
                  },
                  {
                    "$ref": "#/components/schemas/std.string.String"
                  }
                ]
              },
              "type": {
                "const": "named"
              }
            }
          }
        ]
      },
      "reflectapi_demo.tests.enums.output.VariantBody": {
        "type": "object",
        "title": "reflectapi_demo.tests.enums.output.VariantBody",
        "required": [
          "always_null_on_wire"
        ],
        "properties": {
          "always_null_on_wire": {
            "oneOf": [
              {
                "description": "Null",
                "type": "null"
              },
              {
                "$ref": "#/components/schemas/std.string.String"
              }
            ]
          },
          "amount": {
            "oneOf": [
              {
                "description": "Null",
                "type": "null"
              },
              {
                "$ref": "#/components/schemas/std.string.String"
              }
            ]
          }
        }
      },
      "std.string.String": {
        "description": "UTF-8 encoded string",
        "type": "string"
      }
    }
  }
}
