reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__enums__internally_tagged_enum_with_optional_fields-5.snap
---
source: reflectapi-demo/src/tests/enums.rs
expression: "super :: into_python_code :: < Thing > ()"
---
"""
DO NOT MODIFY THIS FILE MANUALLY
This file was generated by reflectapi-cli

Schema name:
"""

from __future__ import annotations


# Standard library imports
from enum import Enum
from typing import Annotated, Any, Generic, Literal, Optional, TypeVar, Union

# Third-party imports
from pydantic import BaseModel, ConfigDict, Field, RootModel

# Runtime imports
from reflectapi_runtime import AsyncClientBase, ClientBase, ApiResponse
from reflectapi_runtime import ReflectapiEmpty
from reflectapi_runtime import ReflectapiInfallible


class ReflectapiDemoTestsEnumsInputVariantBody(BaseModel):
    model_config = ConfigDict(
        extra="ignore", populate_by_name=True, protected_namespaces=(), defer_build=True
    )

    amount: str | None = None
    always_null_on_wire: str | None = None


class ReflectapiDemoTestsEnumsInputThingVariant(BaseModel):
    model_config = ConfigDict(
        extra="ignore", populate_by_name=True, protected_namespaces=(), defer_build=True
    )

    type: Literal["variant"] = Field(
        default="variant", description="Discriminator field"
    )
    amount: str | None = None
    always_null_on_wire: str | None = None


class ReflectapiDemoTestsEnumsInputThingNamed(BaseModel):
    model_config = ConfigDict(
        extra="ignore", populate_by_name=True, protected_namespaces=(), defer_build=True
    )

    type: Literal["named"] = Field(default="named", description="Discriminator field")
    amount: str | None = None


class ReflectapiDemoTestsEnumsInputThing(RootModel):
    root: Annotated[
        Union[
            ReflectapiDemoTestsEnumsInputThingVariant,
            ReflectapiDemoTestsEnumsInputThingNamed,
        ],
        Field(discriminator="type"),
    ]


class ReflectapiDemoTestsEnumsOutputVariantBody(BaseModel):
    model_config = ConfigDict(
        extra="ignore", populate_by_name=True, protected_namespaces=(), defer_build=True
    )

    amount: str | None = None
    always_null_on_wire: str | None = None


class ReflectapiDemoTestsEnumsOutputThingVariant(BaseModel):
    model_config = ConfigDict(
        extra="ignore", populate_by_name=True, protected_namespaces=(), defer_build=True
    )

    type: Literal["variant"] = Field(
        default="variant", description="Discriminator field"
    )
    amount: str | None = None
    always_null_on_wire: str | None = None


class ReflectapiDemoTestsEnumsOutputThingNamed(BaseModel):
    model_config = ConfigDict(
        extra="ignore", populate_by_name=True, protected_namespaces=(), defer_build=True
    )

    type: Literal["named"] = Field(default="named", description="Discriminator field")
    amount: str | None = None


class ReflectapiDemoTestsEnumsOutputThing(RootModel):
    root: Annotated[
        Union[
            ReflectapiDemoTestsEnumsOutputThingVariant,
            ReflectapiDemoTestsEnumsOutputThingNamed,
        ],
        Field(discriminator="type"),
    ]


# Namespace classes for dotted access to types
class reflectapi_demo:
    """Namespace for reflectapi_demo types."""

    class tests:
        """Namespace for tests types."""

        class enums:
            """Namespace for enums types."""

            class input:
                """Namespace for input types."""

                VariantBody = ReflectapiDemoTestsEnumsInputVariantBody
                ThingVariant = ReflectapiDemoTestsEnumsInputThingVariant
                ThingNamed = ReflectapiDemoTestsEnumsInputThingNamed
                Thing = ReflectapiDemoTestsEnumsInputThing

            class output:
                """Namespace for output types."""

                VariantBody = ReflectapiDemoTestsEnumsOutputVariantBody
                ThingVariant = ReflectapiDemoTestsEnumsOutputThingVariant
                ThingNamed = ReflectapiDemoTestsEnumsOutputThingNamed
                Thing = ReflectapiDemoTestsEnumsOutputThing


class AsyncInoutClient:
    """Async client for inout operations."""

    def __init__(self, client: AsyncClientBase) -> None:
        self._client = client

    async def test(
        self,
        data: Optional[reflectapi_demo.tests.enums.input.Thing] = None,
    ) -> ApiResponse[reflectapi_demo.tests.enums.output.Thing]:
        """

        Args:
            data: Request data for the test operation.

        Returns:
            ApiResponse[reflectapi_demo.tests.enums.output.Thing]: Response containing reflectapi_demo.tests.enums.output.Thing data
        """
        path = "/inout_test"

        params: dict[str, Any] = {}
        return await self._client._make_request(
            path,
            params=params if params else None,
            json_model=data,
            response_model=reflectapi_demo.tests.enums.output.Thing,
        )


class AsyncClient(AsyncClientBase):
    """Async client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.inout = AsyncInoutClient(self)


class InoutClient:
    """Synchronous client for inout operations."""

    def __init__(self, client: ClientBase) -> None:
        self._client = client

    def test(
        self,
        data: Optional[reflectapi_demo.tests.enums.input.Thing] = None,
    ) -> ApiResponse[reflectapi_demo.tests.enums.output.Thing]:
        """

        Args:
            data: Request data for the test operation.

        Returns:
            ApiResponse[reflectapi_demo.tests.enums.output.Thing]: Response containing reflectapi_demo.tests.enums.output.Thing data
        """
        path = "/inout_test"

        params: dict[str, Any] = {}
        return self._client._make_request(
            path,
            params=params if params else None,
            json_model=data,
            response_model=reflectapi_demo.tests.enums.output.Thing,
        )


class Client(ClientBase):
    """Synchronous client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.inout = InoutClient(self)


# External type definitions
StdNumNonZeroU32 = Annotated[int, "Rust NonZero u32 type"]
StdNumNonZeroU64 = Annotated[int, "Rust NonZero u64 type"]
StdNumNonZeroI32 = Annotated[int, "Rust NonZero i32 type"]
StdNumNonZeroI64 = Annotated[int, "Rust NonZero i64 type"]

# Rebuild models to resolve forward references
_rebuild_errors: list[str] = []
for _model in [
    ReflectapiDemoTestsEnumsInputThing,
    ReflectapiDemoTestsEnumsInputVariantBody,
    ReflectapiDemoTestsEnumsOutputThing,
    ReflectapiDemoTestsEnumsOutputVariantBody,
]:
    if not hasattr(_model, "model_rebuild"):
        continue
    try:
        _model.model_rebuild()
    except Exception as _exc:
        _rebuild_errors.append(f"  - {_model.__name__}: {type(_exc).__name__}: {_exc}")
if _rebuild_errors:
    raise RuntimeError(
        "reflectapi: failed to rebuild "
        + str(len(_rebuild_errors))
        + " generated model(s). This usually means the codegen emitted an annotation pointing at a symbol that was never defined (a dangling type reference). Fix the codegen rather than catching this error.\n"
        + "\n".join(_rebuild_errors)
    )
